# curve-mail-importer

./: .dockerignore  .env.example  .gitignore  Dockerfile  destination_rules.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push-docker.yml
src/curve_importer/: __main__.py  batch.py  config.py  destinations.py  firefly.py  imap.py  parser.py
tests/: test_batch.py  test_firefly.py  test_parser.py
