[project]
name = "curve-mail-importer"
version = "0.1.0"
description = "Polls Gmail IMAP for Curve receipt emails and creates transactions on Firefly III"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
